--- a/css/style.css
+++ b/css/style.css
@@ -79144,8 +79144,7 @@ table td#today a {
 .screen-reader-text {
   border: 0;
   clip: rect(1px, 1px, 1px, 1px);
-  -webkit-clip-path: inset(50%);
-          clip-path: inset(50%);
+  clip-path: inset(50%);
   height: 1px;
   margin: -1px;
   overflow: hidden;
@@ -79158,8 +79157,7 @@ table td#today a {
 .screen-reader-text:focus {
   background-color: #eee;
   clip: auto !important;
-  -webkit-clip-path: none;
-          clip-path: none;
+  clip-path: none;
   color: #444;
   display: block;
   font-size: 1em;
@@ -79610,8 +79608,7 @@ figure.wp-block-embed {
 input[type=checkbox],
 input[type=radio] {
   -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
+  appearance: none;
   margin: 0;
   width: 15px !important;
   height: 15px !important;
@@ -79861,22 +79858,53 @@ ol li a:hover {
 @keyframes MovefadeUp {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(60px);
     transform: translateY(60px);
   }
   100% {
     opacity: 1;
+    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 }
 .MovefadeUp {
+  -webkit-animation-name: MovefadeUp;
   animation-name: MovefadeUp;
 }
-@keyframes ripple {
+
+@-webkit-keyframes ripple {
   70% {
+    -webkit-box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
     box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
   }
   100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
     box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+@keyframes ripple {
+  70% {
+    -webkit-box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
+    box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+@-webkit-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(255, 255, 255, 0);
+  }
+}
+@-moz-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(255, 255, 255, 0);
+  }
+}
+@-ms-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(255, 255, 255, 0);
   }
 }
 @keyframes pulse {
@@ -79884,12 +79912,35 @@ ol li a:hover {
     box-shadow: 0 0 0 45px rgba(255, 255, 255, 0);
   }
 }
-@keyframes animatelinebar {
+@-webkit-keyframes animatelinebar {
   0% {
+    -webkit-transform: translateX(0px);
     transform: translateX(0px);
   }
   100% {
+    -webkit-transform: translateX(25px);
     transform: translateX(25px);
+  }
+}
+@keyframes animatelinebar {
+  0% {
+    -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+  100% {
+    -webkit-transform: translateX(25px);
+    transform: translateX(25px);
+  }
+}
+@-webkit-keyframes slideUpIn {
+  0% {
+    -webkit-transform: translateY(40px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+  }
+  0% {
+    -webkit-transform: translateY(40px);
   }
 }
 @keyframes slideUpIn {
@@ -79903,12 +79954,28 @@ ol li a:hover {
     transform: translateY(40px);
   }
 }
+@-webkit-keyframes MoveLeftRight {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-20px);
+  }
+}
 @keyframes MoveLeftRight {
   0% {
     transform: translateX(0);
   }
   100% {
     transform: translateX(-20px);
+  }
+}
+@-webkit-keyframes MoveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-30px);
   }
 }
 @keyframes MoveUpDown {
@@ -79919,12 +79986,28 @@ ol li a:hover {
     transform: translateY(-30px);
   }
 }
+@-webkit-keyframes Animated3 {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
 @keyframes Animated3 {
   0% {
     transform: translateY(0);
   }
   100% {
     transform: translateY(-20px);
+  }
+}
+@-webkit-keyframes Animated4 {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-10px);
   }
 }
 @keyframes Animated4 {
@@ -79937,10 +80020,12 @@ ol li a:hover {
 }
 @keyframes UpToDown {
   49% {
+    -webkit-transform: translateY(100%);
     transform: translateY(100%);
   }
   50% {
     opacity: 0;
+    -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
   }
   51% {
@@ -80328,11 +80413,14 @@ ol li a:hover {
 }
 
 .animation {
+  -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
+  -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
 .slideUpIn {
+  -webkit-animation-name: slideUpIn;
   animation-name: slideUpIn;
 }
 
@@ -80487,9 +80575,14 @@ ol li a:hover {
 }
 .header-area.style-2 .header-menu-area .header-top .address .title {
   color: #ffffff;
+  font-weight: 300;
 }
 .header-area.style-2 .header-menu-area .header-top .booking-btn .content p {
   color: #ffffff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
 }
 .header-area.style-2 .header-menu-area .header-top .booking-btn .content a {
   color: #aa8453;
@@ -81595,32 +81688,43 @@ body.admin-bar .header-area.style-7 {
 .slider-area .slider-wrapper-two .slick-active .slider-short-desc,
 .slider-area .slider-wrapper-two .slick-active .slider-btn-wrapper,
 .slider-area .slider-wrapper-two .slick-active .foundation-text {
+  -webkit-animation-name: MovefadeUp;
   animation-name: MovefadeUp;
   -webkit-animation-fill-mode: both;
 }
 .slider-area .slider-wrapper .slick-active .slider-short-title,
 .slider-area .slider-wrapper-two .slick-active .slider-short-title {
+  -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s;
+  -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
 }
 .slider-area .slider-wrapper .slick-active .slider-title,
 .slider-area .slider-wrapper-two .slick-active .slider-title {
+  -webkit-animation-delay: 0.5s;
   animation-delay: 0.5s;
+  -webkit-animation-duration: 0.5s;
   animation-duration: 0.5s;
 }
 .slider-area .slider-wrapper .slick-active .slider-short-desc,
 .slider-area .slider-wrapper-two .slick-active .slider-short-desc {
+  -webkit-animation-delay: 0.7s;
   animation-delay: 0.7s;
+  -webkit-animation-duration: 0.7s;
   animation-duration: 0.7s;
 }
 .slider-area .slider-wrapper .slick-active .slider-btn-wrapper,
 .slider-area .slider-wrapper-two .slick-active .slider-btn-wrapper {
+  -webkit-animation-delay: 0.9s;
   animation-delay: 0.9s;
+  -webkit-animation-duration: 0.9s;
   animation-duration: 0.9s;
 }
 .slider-area .slider-wrapper .slick-active .foundation-text,
 .slider-area .slider-wrapper-two .slick-active .foundation-text {
+  -webkit-animation-delay: 0.9s;
   animation-delay: 0.9s;
+  -webkit-animation-duration: 0.9s;
   animation-duration: 0.9s;
 }
 .slider-area .slider-wrapper .next-btn,
@@ -81822,7 +81926,7 @@ body.admin-bar .header-area.style-7 {
 .slider-area.style-2 .slider-wrapper-two .single-slider .slider-content-wrapper .slider-content .slider-short-title {
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   line-height: normal;
   letter-spacing: 9px;
   text-transform: uppercase;
@@ -82020,8 +82124,7 @@ body.admin-bar .header-area.style-7 {
   padding: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   z-index: -1;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
@@ -82123,8 +82226,7 @@ body.admin-bar .header-area.style-7 {
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .slider-area.style-4 .image-banner-wrapper .image-banner {
     height: 208px;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
 }
 @media (max-width: 991px) {
@@ -82666,6 +82768,7 @@ body.admin-bar .header-area.style-7 {
 .slider-area.style-6 .slick-active .slider-content .slider-title,
 .slider-area.style-6 .slick-active .slider-content .slider-short-desc,
 .slider-area.style-6 .slick-active .slider-content .slider-btn-wrapper {
+  -webkit-animation-name: MovefadeUp;
   animation-name: MovefadeUp;
   -webkit-animation-fill-mode: both;
 }
@@ -83559,8 +83662,7 @@ body.admin-bar .header-area.style-7 {
   height: 100%;
   top: 0;
   left: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transition: all 0.5s ease-out;
 }
 .about-image-card.style-5 img:hover {
@@ -83810,8 +83912,7 @@ body.admin-bar .header-area.style-7 {
   position: absolute;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   top: 0;
   left: 0;
 }
@@ -85402,8 +85503,7 @@ body.admin-bar .header-area.style-7 {
 .single-post-item .post-meta .author-img img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
@@ -85471,8 +85571,7 @@ body.admin-bar .header-area.style-7 {
   transform: scale(1);
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transition: all 0.5s ease-out;
 }
 .post-card .image .circle-btn-wrapper {
@@ -86552,8 +86651,7 @@ body.admin-bar .header-area.style-7 {
   position: absolute;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   left: 0;
   top: 0;
 }
@@ -88245,8 +88343,7 @@ body.admin-bar .header-area.style-7 {
   width: 100%;
   height: 100%;
   position: absolute;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   top: 0;
   left: 0;
   transform: scale(1.01);
@@ -88805,8 +88902,7 @@ body.admin-bar .header-area.style-7 {
 .latest-comments li .comments-box .comments-avatar img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .latest-comments li .comments-box .comments-text {
   overflow: hidden;
@@ -89017,9 +89113,22 @@ ul.children {
   font-size: 18px;
   font-weight: 500;
 }
+.comment-respond *::-webkit-input-placeholder {
+  color: #ffffff;
+}
+.comment-respond *:-moz-placeholder {
+  color: #666;
+  opacity: 1;
+}
 .comment-respond *::-moz-placeholder {
   color: #666;
   opacity: 1;
+}
+.comment-respond *:-ms-input-placeholder {
+  color: #666;
+}
+.comment-respond *::-ms-input-placeholder {
+  color: #666;
 }
 .comment-respond *::placeholder {
   color: #808287;
@@ -89608,8 +89717,7 @@ ul.children {
 .video-popup-card .video-popup-image img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .video-popup-card .video-popup-btn {
   position: absolute;
@@ -89653,6 +89761,9 @@ ul.children {
   font-size: 24px;
 }
 .video-popup-card .video-popup-btn a:hover {
+  -webkit-animation: none;
+  -moz-animation: none;
+  -ms-animation: none;
   animation: none;
 }
 
@@ -89890,8 +90001,7 @@ ul.children {
   width: 100%;
   height: 100%;
   max-width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 5px;
   transition: all 0.5s ease-out;
 }
@@ -90183,8 +90293,7 @@ ul.children {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .hero-section.style-1 .hero-content .hero-content-bottom .member-count {
   margin-left: 18px;
@@ -90360,8 +90469,7 @@ ul.children {
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transform: scale(1.01);
   transition: all 0.5s ease-out;
 }
@@ -91456,20 +91564,34 @@ ul.children {
 @media (max-width: 1399px) {
   .room_and_suites.style-2 .banner-text {
     transform: translate(50px, 30px);
+    color: #ffffff;
   }
 }
 @media (max-width: 991px) {
   .room_and_suites.style-2 .banner-text {
     transform: translate(50px, 0);
+    display: none;
+    color: #ffffff;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .room_and_suites.style-2 .banner-text {
     transform: translate(6%, 0);
+    display: none;
   }
 }
 .room_and_suites.style-2 .banner-text p {
   transform: none;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .room_and_suites.style-2 .banner-text p {
+    color: #ffffff;
+  }
+}
+@media (max-width: 1866px) {
+  .room_and_suites.style-2 .banner-text p {
+    color: #ffffff;
+  }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .room_and_suites.style-2 .banner-text p {
@@ -91708,9 +91830,14 @@ ul.children {
 .testimonial-slider-area.style-2 .slick-list {
   padding-top: 40px !important;
   padding-bottom: 40px !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 .testimonial-slider-area.style-2 .slick-list .slick-track {
-  margin-left: -12px;
+  margin-left: -32px;
+}
+.testimonial-slider-area.style-2 .slick-list .slick-track .slick-center:after {
+  background-color: #aa8453;
 }
 .slick-active .testimonial-slider-area.style-2 .slick-list:nth-child(2) {
   background-color: #f0f0f0;
@@ -91718,7 +91845,7 @@ ul.children {
   transform: scale(1.05);
 }
 .testimonial-slider-area.style-2 .slick-list .testimonial-card {
-  margin-left: 12px;
+  margin-left: 32px;
 }
 .testimonial-slider-area.style-2 .testimonial-card.style-2 {
   transition: all 0.5s ease-out;
@@ -91797,6 +91924,13 @@ ul.children {
 
 .project-area.style-1 {
   overflow: hidden;
+  position: relative;
+}
+.project-area.style-1 .outer-shape {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 3;
 }
 .project-area.style-1 .section-title-wrapper {
   position: relative;
@@ -91877,11 +92011,12 @@ ul.children {
 }
 
 .subscribe-area.style-1 {
-  max-height: 621px;
+  min-height: 621px;
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 .subscribe-area.style-1 .subscribe-form-widget {
   max-width: 451px;
@@ -91896,6 +92031,8 @@ ul.children {
   justify-content: center;
   gap: 20px;
   text-align: center;
+  position: absolute;
+  top: 0;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .subscribe-area.style-1 .subscribe-form-widget {
@@ -92854,8 +92991,7 @@ ul.children {
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .contact-form-area .image-wrapper img {
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     height: 100%;
   }
 }
@@ -93005,8 +93141,7 @@ ul.children {
 }
 .list-page-wrapper .sidebar .price-filter .slider-container input[type=range] {
   -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
+  appearance: none;
   position: absolute;
   width: 100%;
   height: 3px;
@@ -93641,8 +93776,7 @@ ul.children {
   height: 100%;
   top: 0;
   left: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transition: all 0.5s ease-out;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -93901,8 +94035,7 @@ ul.children {
   }
 }
 .footer-widget .footer-widget-info .footer-logo a img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .footer-widget .footer-widget-info .info-form-and-social-icon {
   display: flex;
@@ -94260,9 +94393,22 @@ ul.children {
   background: #322e2e;
   border-right: 0;
 }
+.subscribe-form-widget .single-field *::-webkit-input-placeholder {
+  color: #808287;
+}
+.subscribe-form-widget .single-field *:-moz-placeholder {
+  color: #808287;
+  opacity: 1;
+}
 .subscribe-form-widget .single-field *::-moz-placeholder {
   color: #808287;
   opacity: 1;
+}
+.subscribe-form-widget .single-field *:-ms-input-placeholder {
+  color: #808287;
+}
+.subscribe-form-widget .single-field *::-ms-input-placeholder {
+  color: #808287;
 }
 .subscribe-form-widget .single-field *::placeholder {
   color: #808287;
@@ -94676,8 +94822,7 @@ input[type=date]::-ms-clear {
 .checknow-form .inner-wrapper {
   padding: 20px;
   background-color: rgba(63, 63, 63, 0.5);
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
 }
 .checknow-form form {
   display: flex;
@@ -94814,8 +94959,7 @@ input[type=date]::-ms-clear {
   appearance: none;
 }
 .checknow-form.styel-2 .inner-wrapper {
-  -webkit-backdrop-filter: blur(0);
-          backdrop-filter: blur(0);
+  backdrop-filter: blur(0);
 }
 .checknow-form.styel-2 .inner-wrapper .date-container i {
   color: #a19292;
@@ -94861,10 +95005,8 @@ input[type=date]::-ms-clear {
 .room-card:hover .content-wrapper, .room-card.slick-center .content-wrapper {
   height: 50%;
   bottom: 0;
-  -webkit-clip-path: polygon(50% 0, 50% 0, 100% 20%, 100% 100%, 0 100%, 0 20%);
-          clip-path: polygon(50% 0, 50% 0, 100% 20%, 100% 100%, 0 100%, 0 20%);
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  clip-path: polygon(50% 0, 50% 0, 100% 20%, 100% 100%, 0 100%, 0 20%);
+  backdrop-filter: blur(10px);
   transition: all 0.5s ease-out;
 }
 .room-card:hover .content-wrapper .inner-wrapper, .room-card.slick-center .content-wrapper .inner-wrapper {
@@ -94883,8 +95025,7 @@ input[type=date]::-ms-clear {
   height: 100%;
   bottom: 0;
   transition: height 0.5s ease-out;
-  -webkit-clip-path: none;
-          clip-path: none;
+  clip-path: none;
   color: #ffffff;
   width: 100%;
   background: rgba(34, 34, 34, 0.75);
@@ -95056,8 +95197,7 @@ input[type=date]::-ms-clear {
 }
 .room-card.style-3:hover .content-wrapper {
   height: 100%;
-  -webkit-clip-path: none;
-          clip-path: none;
+  clip-path: none;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .room-card.style-3 {
@@ -95131,11 +95271,9 @@ input[type=date]::-ms-clear {
 }
 .room-card.styel-5:hover .content-wrapper {
   height: 100%;
-  -webkit-clip-path: none;
-          clip-path: none;
+  clip-path: none;
   filter: unset;
-  -webkit-backdrop-filter: blur(0);
-          backdrop-filter: blur(0);
+  backdrop-filter: blur(0);
 }
 .room-card.styel-5 .content-wrapper .inner-wrapper {
   bottom: 30px;
