--- a/sass/partials/_header-two.scss
+++ b/sass/partials/_header-two.scss
@@ -55,12 +55,17 @@
           color: $primary-color;
           .title {
             color: $white;
+            font-weight: 300;
           }
         }
         .booking-btn {
           .content {
             p {
               color: $white;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 29px;
             }
             a {
               color: $primary-color;
