--- a/sass/modules/slider/_slider-style-two.scss
+++ b/sass/modules/slider/_slider-style-two.scss
@@ -61,7 +61,7 @@
             .slider-short-title {
               font-size: 18px;
               font-style: normal;
-              font-weight: 400;
+              font-weight: 300;
               line-height: normal;
               letter-spacing: 9px;
               text-transform: uppercase;
@@ -134,7 +134,7 @@
             overflow: hidden;
             position: relative;
             &:before {
-              content: '';
+              content: "";
               position: absolute;
               width: 100%;
               height: 100%;
