--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -36,6 +36,10 @@
 
   .footer-sec {
     padding-top: 80px;
+    @include sm {
+      padding-top: 60px;
+      padding-bottom: 54px;
+    }
 
     hr {
       margin: 30px 0 0 0;
@@ -365,7 +369,7 @@
           align-items: start;
         }
         &:before {
-          content: '\f101';
+          content: "\f101";
           font-family: $font-awesome;
           font-size: 16px;
           color: $white;
@@ -691,7 +695,7 @@
   .mc4wp-form-255 {
     margin-top: 12px;
     .mc4wp-form-fields {
-      input[type='submit'] {
+      input[type="submit"] {
         padding: 12px 20px;
         background-color: $primary-color;
         color: $white;
