--- a/sass/modules/slider/_slider-style-one.scss
+++ b/sass/modules/slider/_slider-style-one.scss
@@ -14,6 +14,9 @@
     right: 50px;
     background-color: transparent;
     z-index: -1;
+    @include sm {
+      display: none;
+    }
   }
   .slider-bg {
     position: absolute;
