--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -110,7 +110,7 @@
     }
     @include sm {
       padding-top: 60px;
-      padding-bottom: 80px;
+      padding-bottom: 60px;
     }
     .section-title {
       margin-top: -4px;
@@ -253,7 +253,7 @@
       padding-bottom: 200px;
     }
     @include sm {
-      padding: 80px 0;
+      padding: 60px 0;
     }
     &:before {
       content: "";
@@ -311,6 +311,9 @@
     }
     .inner-wrapper {
       background-color: rgba(255, 255, 255, 0.2);
+      @include sm {
+        padding-top: 60px;
+      }
       form {
         box-shadow: 0px 4px 20px 0px rgba(234, 234, 234, 0.3);
         .input-wrapper {
@@ -360,7 +363,7 @@
     }
     @include sm {
       padding-top: 60px;
-      padding-bottom: 60px;
+      padding-bottom: 56px;
     }
     .bg-image {
       position: absolute;
@@ -438,6 +441,7 @@
     }
     @include sm {
       padding-bottom: 60px;
+      padding-top: 40px;
     }
     .bg-image {
       position: absolute;
@@ -499,6 +503,10 @@
   &.style-1 {
     overflow: hidden;
     position: relative;
+    @include sm {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
     .outer-shape {
       position: absolute;
       left: 0;
@@ -579,18 +587,105 @@
     .slick-list {
       overflow: visible;
     }
+    // Slick Dots
+    .slick-dots {
+      display: flex;
+      gap: 30px;
+      flex-direction: column;
+      transform: translateY(-50%);
+      z-index: 20;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+      margin-top: 20px;
+
+      @include rmaxwd(1800) {
+        right: 5%;
+      }
+
+      @include rmaxwd(991) {
+        gap: 20px;
+        bottom: 0;
+      }
+
+      @include rmaxwd(767) {
+        gap: 15px;
+        margin-top: 0;
+        transform: translateY(25%);
+      }
+
+      @include rmaxwd(575) {
+        gap: 10px;
+        bottom: 40px;
+        flex-direction: row;
+        position: static;
+        left: 0;
+        right: 0;
+        justify-content: center;
+      }
+      @include md {
+        flex-direction: column;
+      }
+
+      li {
+        display: flex;
+        line-height: 0;
+        outline: 1px solid transparent;
+        border: 4px solid transparent;
+        border-radius: 50px;
+        @include transition;
+
+        button {
+          font-size: 0;
+          padding: 0;
+          width: 10px;
+          height: 10px;
+          background-color: $primary-color;
+          border-radius: 50px;
+          position: relative;
+          flex-shrink: 0;
+          @include transition;
+
+          &:hover {
+            background-color: $white;
+            @include transition;
+          }
+        }
+
+        &.slick-active {
+          @include transition;
+          outline: 1px solid $gray;
+
+          button {
+            width: 10px;
+            height: 10px;
+
+            &:before {
+              display: none;
+            }
+
+            @include transition;
+          }
+        }
+      }
+    }
   }
 }
 
 // subscribe-area
 .subscribe-area {
   &.style-1 {
-    min-height: 621px;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+    @include sm {
+      padding-top: 96px;
+    }
+    .inner-wrapper {
+      min-height: 621px;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      position: relative;
+    }
     .subscribe-form-widget {
       max-width: 451px;
       width: 100%;
@@ -608,6 +703,7 @@
       top: 0;
       @include sm {
         padding: 0 15px;
+        max-width: 350px;
       }
       .short-title {
         font-size: 18px;
