--- a/sass/partials/_footer-two.scss
+++ b/sass/partials/_footer-two.scss
@@ -82,6 +82,10 @@
     grid-gap: 12px;
     width: 240px;
 
+    @include xl {
+      grid-template-columns: repeat(3, 1fr);
+      width: 100%;
+    }
     @include lg {
       grid-template-columns: repeat(3, 1fr);
       width: 100%;
