--- a/css/style.css
+++ b/css/style.css
@@ -87246,6 +87246,11 @@ body.admin-bar .header-area.style-7 {
   background-position: center;
   background-repeat: no-repeat;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .breadcrumb-wrapper {
+    margin: 60px 0;
+  }
+}
 .breadcrumb-wrapper:before {
   content: "";
   position: absolute;
@@ -87750,6 +87755,12 @@ body.admin-bar .header-area.style-7 {
 .list-item-wrapper-outer {
   display: flex;
   gap: 108px;
+  flex-wrap: wrap;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .list-item-wrapper-outer {
+    gap: 30px;
+  }
 }
 
 .list-item-wrapper {
@@ -87758,6 +87769,7 @@ body.admin-bar .header-area.style-7 {
   gap: 15px;
   padding: 0;
   list-style: none;
+  margin-bottom: 0;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .list-item-wrapper {
@@ -92472,97 +92484,21 @@ ul.children {
   }
 }
 
-.cta-area.style-3 {
-  position: relative;
-  z-index: 2;
-  padding: 120px 0;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .cta-area.style-3 {
-    padding: 80px 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .cta-area.style-3 {
-    padding: 100px 0;
-  }
-}
-.cta-area.style-3 .image-overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(35, 38, 45, 0.86);
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-.cta-area.style-3 .call-to-action-card {
-  margin-top: -6px;
-  margin-bottom: -8px;
-}
-.cta-area.style-3 .call-to-action-card .short-title {
-  font-size: 21px;
-}
-.cta-area.style-3 .call-to-action-card .title {
-  font-size: 72px;
-  line-height: 84px;
-  margin-top: 5px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .cta-area.style-3 .call-to-action-card .title {
-    font-size: 34px;
-    line-height: 48px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .cta-area.style-3 .call-to-action-card .title {
-    font-size: 48px;
-    line-height: 64px;
-  }
-}
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .cta-area.style-3 .call-to-action-card .title {
-    font-size: 52px;
-    line-height: 72px;
+  .about-us-2 .booking-area {
+    padding-top: 100px;
   }
-}
-.cta-area.style-3 .call-to-action-card .btn-wrapper {
-  margin-top: 60px;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
-  .cta-area.style-3 .call-to-action-card .btn-wrapper {
-    margin-top: 0;
+  .about-us-2 .booking-area .booking-form {
+    padding-top: 56px;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .cta-area.style-3 .call-to-action-card .btn-wrapper {
-    margin-top: 20px;
+
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .booking-area.style-2 {
+    padding-top: 60px;
   }
-}
-.cta-area.style-3 .call-to-action-card .video-popup-btn a {
-  width: 120px;
-  height: 120px;
-  background-color: #aa8453;
-  border-radius: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #ffffff;
-  font-size: 24px;
-  animation: ripple 4s infinite;
-  box-shadow: 0 0 0 0 rgba(33, 173, 224, 0.8);
-}
-.cta-area.style-3 .call-to-action-card .video-popup-btn .btn-text {
-  font-size: 18px;
-  text-transform: uppercase;
-  color: #ffffff;
-  font-weight: 500;
-  font-family: "Gilda Display", serif;
-  margin-top: 40px;
-  display: block;
 }
 
 .brand-slider-area.style-2 {
@@ -92874,97 +92810,21 @@ ul.children {
   text-transform: uppercase;
 }
 
-.cta-area.style-3 {
-  position: relative;
-  z-index: 2;
-  padding: 120px 0;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .cta-area.style-3 {
-    padding: 80px 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .cta-area.style-3 {
-    padding: 100px 0;
-  }
-}
-.cta-area.style-3 .image-overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(35, 38, 45, 0.86);
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-.cta-area.style-3 .call-to-action-card {
-  margin-top: -6px;
-  margin-bottom: -8px;
-}
-.cta-area.style-3 .call-to-action-card .short-title {
-  font-size: 21px;
-}
-.cta-area.style-3 .call-to-action-card .title {
-  font-size: 72px;
-  line-height: 84px;
-  margin-top: 5px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .cta-area.style-3 .call-to-action-card .title {
-    font-size: 34px;
-    line-height: 48px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .cta-area.style-3 .call-to-action-card .title {
-    font-size: 48px;
-    line-height: 64px;
-  }
-}
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .cta-area.style-3 .call-to-action-card .title {
-    font-size: 52px;
-    line-height: 72px;
+  .about-us-2 .booking-area {
+    padding-top: 100px;
   }
-}
-.cta-area.style-3 .call-to-action-card .btn-wrapper {
-  margin-top: 60px;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
-  .cta-area.style-3 .call-to-action-card .btn-wrapper {
-    margin-top: 0;
+  .about-us-2 .booking-area .booking-form {
+    padding-top: 56px;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .cta-area.style-3 .call-to-action-card .btn-wrapper {
-    margin-top: 20px;
+
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .booking-area.style-2 {
+    padding-top: 60px;
   }
-}
-.cta-area.style-3 .call-to-action-card .video-popup-btn a {
-  width: 120px;
-  height: 120px;
-  background-color: #aa8453;
-  border-radius: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #ffffff;
-  font-size: 24px;
-  animation: ripple 4s infinite;
-  box-shadow: 0 0 0 0 rgba(33, 173, 224, 0.8);
-}
-.cta-area.style-3 .call-to-action-card .video-popup-btn .btn-text {
-  font-size: 18px;
-  text-transform: uppercase;
-  color: #ffffff;
-  font-weight: 500;
-  font-family: "Gilda Display", serif;
-  margin-top: 40px;
-  display: block;
 }
 
 .brand-slider-area.style-2 {
@@ -93125,6 +92985,16 @@ ul.children {
   }
 }
 
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .list-page-wrapper {
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+}
+.list-page-wrapper.details-page {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 .list-page-wrapper .btn-wrapper {
   display: flex;
   align-items: center;
@@ -93153,6 +93023,12 @@ ul.children {
   .list-page-wrapper .sidebar {
     margin-top: 60px;
     padding: 30px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .list-page-wrapper .sidebar {
+    padding: 30px;
+    margin-top: 60px;
   }
 }
 .list-page-wrapper .sidebar .sidebar-title {
@@ -93370,6 +93246,11 @@ ul.children {
 .list-page-wrapper.details-page .tab-slider {
   position: relative;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .list-page-wrapper.details-page .tab-slider {
+    margin-bottom: 60px;
+  }
+}
 .list-page-wrapper.details-page .tab-slider .tab-btn {
   position: absolute;
   top: 40%;
@@ -93410,8 +93291,9 @@ ul.children {
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .list-page-wrapper.details-page .tab-slider .slick-dots {
     position: absolute;
-    left: unset;
-    bottom: 42px;
+    left: 0;
+    bottom: -50px;
+    width: 100%;
   }
 }
 .list-page-wrapper.details-page .tab-slider .slick-dots li {
@@ -93420,6 +93302,12 @@ ul.children {
   justify-content: center;
   width: 220px;
   height: 150px;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .list-page-wrapper.details-page .tab-slider .slick-dots li {
+    height: auto;
+    width: 100%;
+  }
 }
 .list-page-wrapper.details-page .tab-slider .slick-dots li button {
   width: 220px;
@@ -93435,8 +93323,8 @@ ul.children {
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .list-page-wrapper.details-page .tab-slider .slick-dots li button {
-    width: 30px;
-    height: 30px;
+    width: 100%;
+    height: 40px;
   }
 }
 .list-page-wrapper.details-page .tab-slider .slick-dots li button img {
@@ -94699,6 +94587,12 @@ ul.children {
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 12px;
   width: 240px;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+  .footer .widget-instagram-feed {
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+  }
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .footer .widget-instagram-feed {
