--- a/sass/pages/_about-page.scss
+++ b/sass/pages/_about-page.scss
@@ -1,87 +1,19 @@
-// FAQ Area
-.cta-area {
-  &.style-3 {
-    position: relative;
-    z-index: 2;
-    padding: 120px 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-
+.about-us-2 {
+  .booking-area {
+    @include lg {
+      padding-top: 100px;
+    }
+    .booking-form {
+      @include sm {
+        padding-top: 56px;
+      }
+    }
+  }
+}
+.booking-area {
+  &.style-2 {
     @include sm {
-      padding: 80px 0;
-    }
-    @include md {
-      padding: 100px 0;
-    }
-    .image-overlay {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(35, 38, 45, 0.86);
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
-    .call-to-action-card {
-      margin-top: -6px;
-      margin-bottom: -8px;
-
-      .short-title {
-        font-size: 21px;
-      }
-      .title {
-        font-size: 72px;
-        line-height: 84px;
-        margin-top: 5px;
-
-        @include sm {
-          font-size: 34px;
-          line-height: 48px;
-        }
-        @include md {
-          font-size: 48px;
-          line-height: 64px;
-        }
-        @include lg {
-          font-size: 52px;
-          line-height: 72px;
-        }
-      }
-      .btn-wrapper {
-        margin-top: 60px;
-
-        @include sm {
-          margin-top: 0;
-        }
-        @include md {
-          margin-top: 20px;
-        }
-      }
-      .video-popup-btn {
-        a {
-          width: 120px;
-          height: 120px;
-          background-color: $primary-color;
-          border-radius: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          color: $white;
-          font-size: 24px;
-          animation: ripple 4s infinite;
-          box-shadow: 0 0 0 0 rgba(33, 173, 224, 0.8);
-        }
-        .btn-text {
-          font-size: 18px;
-          text-transform: uppercase;
-          color: $white;
-          font-weight: 500;
-          font-family: $heading-font;
-          margin-top: 40px;
-          display: block;
-        }
-      }
+      padding-top: 60px;
     }
   }
 }
@@ -90,9 +22,9 @@
 .brand-slider-area {
   &.style-2 {
     margin-bottom: 100px;
-     .client-logo-slider-wrapper {
+    .client-logo-slider-wrapper {
       padding: 50px 0;
-     }
+    }
 
     @include sm {
       padding: 80px 0;
